# join

./: .gitignore  Cargo.toml
src/: main.rs
src/attendee/: attendee.rs  mod.rs
src/event/: event.rs
templates/: event_page.html  home.html  layout.html  new_attendee.html  new_event.html
