[package]
name = "join"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
r2d2 = "0.8.10"
r2d2_sqlite =  "0.25.0"
uuid = { version = "1.11.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features=["derive"] }
rusqlite = { version = "0.32.1", features=["chrono", "uuid"] }
minijinja = { version = "2.1.2", features=["loader"] }
